force-app/main/default/objects/Account/fields/Account_Merge_Requester__c.field-meta.xml
<CustomField>
    <fullName>Account_Merge_Requester__c</fullName>
    <description>This hidden field holds user who requests for account merge, it is for report purpose</description>
    <label>Account Merge Requester</label>
    <length>100</length>
    <type>Text</type>
</CustomField>