force-app/main/default/objects/Account/fields/Account_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Account_Metadata__c</fullName>
    <description>Used for merging data on flows</description>
    <formula>ShippingStreet + " " + ShippingCity + " " + ShippingState + " " + ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for merging data on flows</inlineHelpText>
    <label>Account Metadata</label>
    <type>Text</type>
</CustomField>