force-app/main/default/objects/Account/fields/AccountMatch__c.field-meta.xml
<CustomField>
    <fullName>AccountMatch__c</fullName>
    <description>Concatenates field values for the purposes of matching person accounts for imports</description>
    <formula>IF ( IsPersonAccount ,
 LastName + ',' + FirstName + ',' + ShippingStreet + ',' + ShippingPostalCode 
, NULL )</formula>
    <label>AccountMatch</label>
    <type>Text</type>
</CustomField>