force-app/main/default/objects/Account/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Location</fullName>
            </value>
            <value>
                <fullName>Headquarters</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Job Site</fullName>
            </value>
            <value>
                <fullName>Location of Records</fullName>
            </value>
            <value>
                <fullName>P.O. Box</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>