force-app/main/default/objects/Account/fields/Attention_To1__c.field-meta.xml
<CustomField>
    <fullName>Attention_To1__c</fullName>
    <label>Attention To:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>