force-app/main/default/objects/Account/fields/Bankruptcy_Court__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Court__c</fullName>
    <label>Bankruptcy Court</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bankruptcy_Court_District__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Riverside</fullName>
            </value>
            <value>
                <fullName>Santa Ana</fullName>
            </value>
            <value>
                <fullName>Woodland Hills</fullName>
            </value>
            <value>
                <fullName>Santa Barbara</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>Modesto</fullName>
            </value>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>Oakland</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>Santa Rosa</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>