force-app/main/default/objects/Account/fields/Bankruptcy_Filing_Number__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Filing_Number__c</fullName>
    <label>Bankruptcy Filing Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>