force-app/main/default/objects/Account/fields/Bankruptcy_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Status_Date__c</fullName>
    <label>Bankruptcy Status Effective Date</label>
    <type>Date</type>
</CustomField>