force-app/main/default/objects/Account/fields/Behavior_Level__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Level__c</fullName>
    <description>roll up to Case Role's field Behavior</description>
    <label>Enter Behavior Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>