force-app/main/default/objects/Account/fields/BirthDate_in_Text__c.field-meta.xml
<CustomField>
    <fullName>BirthDate_in_Text__c</fullName>
    <formula>TEXT(PersonBirthdate)</formula>
    <label>BirthDate in Text</label>
    <type>Text</type>
</CustomField>