force-app/main/default/objects/Account/fields/BOFE_Advocate__c.field-meta.xml
<CustomField>
    <fullName>BOFE_Advocate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates that the account is flagged as an advocate group</description>
    <inlineHelpText>Check this box if this entity is an "Advocate" group for BOFE</inlineHelpText>
    <label>BOFE Advocate</label>
    <type>Checkbox</type>
</CustomField>