force-app/main/default/objects/Account/fields/BOFE_Office__c.field-meta.xml
<CustomField>
    <fullName>BOFE_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used in the Wage Claim Referral Flow to tie a Wage office Account Record to the DIR Office Record in order for a WCA Claim Referral to go to the right group.  This should be removed after Wage is changed, and the Flow changed.</description>
    <inlineHelpText>This field is used in the Wage Claim Referral Flow to tie a Wage office Account Record to the DIR Office Record in order for a WCA Claim Referral to go to the right group.  This should be removed after Wage is changed, and the Flow changed.</inlineHelpText>
    <label>BOFE Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>BOFE_Office_Account</relationshipName>
    <type>Lookup</type>
</CustomField>