force-app/main/default/objects/Account/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <label>Business License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CSLB</fullName>
            </value>
            <value>
                <fullName>Car Wash</fullName>
            </value>
            <value>
                <fullName>Garment</fullName>
            </value>
            <value>
                <fullName>FLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>