force-app/main/default/objects/Account/fields/City_Business_License__c.field-meta.xml
<CustomField>
    <fullName>City_Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to link the office location where the employer business license information is obtained from</description>
    <inlineHelpText>Complete this field when requesting a city business license (WCA 10A)</inlineHelpText>
    <label>City Business License</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>City Business License</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Accounts (City Business License)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>