force-app/main/default/objects/Account/fields/Claim_User__c.field-meta.xml
<CustomField>
    <fullName>Claim_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claim_Users</relationshipName>
    <type>Lookup</type>
</CustomField>