force-app/main/default/objects/Account/fields/CloudingoAgent__BAS__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__BAS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Billing Address Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>