force-app/main/default/objects/Account/fields/CloudingoAgent__BAV__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__BAV__c</fullName>
    <label>Billing Address Vacancy</label>
    <length>1</length>
    <type>Text</type>
</CustomField>