force-app/main/default/objects/Account/fields/CloudingoAgent__SAR__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__SAR__c</fullName>
    <label>Shipping Address Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>