force-app/main/default/objects/Account/fields/CloudingoAgent__SAV__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__SAV__c</fullName>
    <label>Shipping Address Vacancy</label>
    <length>1</length>
    <type>Text</type>
</CustomField>