force-app/main/default/objects/Account/fields/Comments_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Contact__c</fullName>
    <label>Comments from Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>