force-app/main/default/objects/Account/fields/Company_s_Workday__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Workday__c</fullName>
    <description>Company's Workday</description>
    <inlineHelpText>24 hour period in military time; e.g 12:01 - 24:00.</inlineHelpText>
    <label>Company's Workday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>