force-app/main/default/objects/Account/fields/Convert_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Convert_Account_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to request this account to be converted to a different account type</description>
    <inlineHelpText>Check this box to request this account to be converted to a different account type</inlineHelpText>
    <label>Convert Account Type</label>
    <type>Checkbox</type>
</CustomField>