force-app/main/default/objects/Account/fields/Corp_or_LLC_ID__c.field-meta.xml
<CustomField>
    <fullName>Corp_or_LLC_ID__c</fullName>
    <label>Corp or LLC ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>