force-app/main/default/objects/Account/fields/Corp_or_LLC_Name__c.field-meta.xml
<CustomField>
    <fullName>Corp_or_LLC_Name__c</fullName>
    <label>Corp or LLC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>