force-app/main/default/objects/Account/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>