force-app/main/default/objects/Account/fields/County_Registrar__c.field-meta.xml
<CustomField>
    <fullName>County_Registrar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link to the office record where the employer business information is obtained from</description>
    <inlineHelpText>Complete this field when requesting a fictitious business name or completing a lien</inlineHelpText>
    <label>County Registrar</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>County Registrar</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Accounts (County Registrar)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>