force-app/main/default/objects/Account/fields/Court_District__c.field-meta.xml
<CustomField>
    <fullName>Court_District__c</fullName>
    <label>Court District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>