force-app/main/default/objects/Account/fields/Court_Division__c.field-meta.xml
<CustomField>
    <fullName>Court_Division__c</fullName>
    <label>Court Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>