force-app/main/default/objects/Account/fields/Date_Formed__c.field-meta.xml
<CustomField>
    <fullName>Date_Formed__c</fullName>
    <description>Registration form question</description>
    <inlineHelpText>On what date was your Corporation or LLC officially formed or organized?</inlineHelpText>
    <label>Date Formed</label>
    <type>Date</type>
</CustomField>