force-app/main/default/objects/Account/fields/Date_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Changed__c</fullName>
    <description>Populated after the Entity Status Changes</description>
    <inlineHelpText>Populated after the Entity Status Changes</inlineHelpText>
    <label>Entity Status Effective Date</label>
    <type>Date</type>
</CustomField>