force-app/main/default/objects/Account/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <description>Name of the Corresponding DBA</description>
    <inlineHelpText>Name of the Corresponding DBA</inlineHelpText>
    <label>DBA (BOFE Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>