force-app/main/default/objects/Account/fields/DBA_Concatenation__c.field-meta.xml
<CustomField>
    <fullName>DBA_Concatenation__c</fullName>
    <description>Used to concatenate all DBAs on an account into one string for use in output forms.</description>
    <label>Total DBAs</label>
    <type>TextArea</type>
</CustomField>