force-app/main/default/objects/Account/fields/Driver_s_License__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License__c</fullName>
    <label>Driver's License #</label>
    <length>19</length>
    <type>Text</type>
</CustomField>