force-app/main/default/objects/Account/fields/Driver_s_License_State__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License_State__c</fullName>
    <label>Driver's License State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Abbreviations</valueSetName>
    </valueSet>
</CustomField>