force-app/main/default/objects/Account/fields/Duplicate_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_ID_2__c</fullName>
    <description>Displays the Merge Into Account ID if the Merge Into Account is populated, otherwise displays the accountID. This field is used for de-duplication of accounts using Demand Tools so that accounts created via public web interface can be de-duplicated within salesforce rather than displaying records to the public.</description>
    <formula>IF ( NOT ( ISBLANK ( Merge_Into_Account__c ) ),  CASESAFEID(Merge_Into_Account__r.Id) , CASESAFEID(Id) )</formula>
    <label>Duplicate ID</label>
    <type>Text</type>
</CustomField>