force-app/main/default/objects/Account/fields/ECT__c.field-meta.xml
<CustomField>
    <fullName>ECT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enforcement Coordination Team</description>
    <label>ECT</label>
    <type>Checkbox</type>
</CustomField>