force-app/main/default/objects/Account/fields/Employer_No_Longer_Operating__c.field-meta.xml
<CustomField>
    <fullName>Employer_No_Longer_Operating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer No Longer Operating</label>
    <type>Checkbox</type>
</CustomField>