force-app/main/default/objects/Account/fields/Employer_Still_In_Business_Notes__c.field-meta.xml
<CustomField>
    <fullName>Employer_Still_In_Business_Notes__c</fullName>
    <label>Employer Still In Business Notes</label>
    <type>TextArea</type>
</CustomField>