force-app/main/default/objects/Account/fields/Entity_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Entity_Registration_Number__c</fullName>
    <label>Entity Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>