force-app/main/default/objects/Account/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual/Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>Public Entity</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>Professional Corporation</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Advocate Organization</fullName>
            </value>
            <value>
                <fullName>General Partner</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Nonprofit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>