force-app/main/default/objects/Account/fields/Entity_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_Other__c</fullName>
    <inlineHelpText>Used to populate output forms</inlineHelpText>
    <label>Entity Type - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>