force-app/main/default/objects/Account/fields/Entity_Type_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_Other_Text__c</fullName>
    <label>Entity Type Description - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>