force-app/main/default/objects/Account/fields/Entity_Type_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_Placeholder__c</fullName>
    <description>Hidden Placeholder for Entity Type to update on new form assembly submissions.</description>
    <inlineHelpText>Hidden Placeholder for Entity Type to update on new form assembly submissions.</inlineHelpText>
    <label>Entity Type Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>