force-app/main/default/objects/Account/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration Date of the Entity Registration</description>
    <inlineHelpText>Expiration Date of the Entity Registration</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>