force-app/main/default/objects/Account/fields/Foreign_Address__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Address__c</fullName>
    <description>Address for any business located off-shore.</description>
    <label>Foreign Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>