force-app/main/default/objects/Account/fields/Garment_Application__c.field-meta.xml
<CustomField>
    <fullName>Garment_Application__c</fullName>
    <label>Garment Application #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>