force-app/main/default/objects/Account/fields/Good_standing_with_CA_Secretary_of_State__c.field-meta.xml
<CustomField>
    <fullName>Good_standing_with_CA_Secretary_of_State__c</fullName>
    <inlineHelpText>Is your corporation or LLC in good standing with the California Secretary of State?</inlineHelpText>
    <label>Good standing with CA Secretary of State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>