force-app/main/default/objects/Account/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <description>To define what is imported from the BOFE TIPP DB</description>
    <label>Imported From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FM-TIPP</fullName>
            </value>
            <value>
                <fullName>01-112</fullName>
            </value>
            <value>
                <fullName>17-113</fullName>
            </value>
            <value>
                <fullName>VNO-WCA</fullName>
            </value>
            <value>
                <fullName>Garment</fullName>
            </value>
            <value>
                <fullName>04-112</fullName>
            </value>
            <value>
                <fullName>TIPP-FM</fullName>
            </value>
            <value>
                <fullName>Public BOFE</fullName>
            </value>
            <value>
                <fullName>FRE-WCA</fullName>
            </value>
            <value>
                <fullName>PAGA</fullName>
            </value>
            <value>
                <fullName>Form40</fullName>
            </value>
            <value>
                <fullName>32-117</fullName>
            </value>
            <value>
                <fullName>BAK-WCA</fullName>
            </value>
            <value>
                <fullName>STK-WCA</fullName>
            </value>
            <value>
                <fullName>SAC-WCA</fullName>
            </value>
            <value>
                <fullName>14-112</fullName>
            </value>
            <value>
                <fullName>RDG-WCA</fullName>
            </value>
            <value>
                <fullName>08-116</fullName>
            </value>
            <value>
                <fullName>15-116</fullName>
            </value>
            <value>
                <fullName>10-117</fullName>
            </value>
            <value>
                <fullName>SDO-WCA</fullName>
            </value>
            <value>
                <fullName>OAK-WCA</fullName>
            </value>
            <value>
                <fullName>07-119</fullName>
            </value>
            <value>
                <fullName>18-113</fullName>
            </value>
            <value>
                <fullName>ANA-WCA</fullName>
            </value>
            <value>
                <fullName>12-119</fullName>
            </value>
            <value>
                <fullName>SJO-WCA</fullName>
            </value>
            <value>
                <fullName>633-114</fullName>
            </value>
            <value>
                <fullName>06-114</fullName>
            </value>
            <value>
                <fullName>13-113</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>