force-app/main/default/objects/Account/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <label>Industry Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order 1</fullName>
            </value>
            <value>
                <fullName>180     All manufacturing except computer and garment</fullName>
            </value>
            <value>
                <fullName>181 Garment Manufacturing except AB 633</fullName>
            </value>
            <value>
                <fullName>185 Printing &amp; Textile Products</fullName>
            </value>
            <value>
                <fullName>189 Computer Industry</fullName>
            </value>
            <value>
                <fullName>195 Other (auto wrecking, machine shops, tool die shops, sawmills)</fullName>
            </value>
            <value>
                <fullName>633 Garment under AB 633</fullName>
            </value>
            <value>
                <fullName>Order 2</fullName>
            </value>
            <value>
                <fullName>223 Beauty Shops &amp; Barber Shops</fullName>
            </value>
            <value>
                <fullName>229  Other (funeral parlors, weight and health clubs)</fullName>
            </value>
            <value>
                <fullName>Order 3</fullName>
            </value>
            <value>
                <fullName>303 Canning, Freezing, and Preserving Establishments</fullName>
            </value>
            <value>
                <fullName>Order 4</fullName>
            </value>
            <value>
                <fullName>419 Communications, Utilities, Newspapers</fullName>
            </value>
            <value>
                <fullName>429 Banks, Finance, Mortgage Companies, Insurance, Real Estate, Travel Agencies</fullName>
            </value>
            <value>
                <fullName>439 Other (chainsaw &amp; lawn mower repair, home health care, employment agencies, non boarding schools, cable TV)</fullName>
            </value>
            <value>
                <fullName>440 Health Care Industry</fullName>
            </value>
            <value>
                <fullName>449 Professional Offices (architects, attorneys, CPAs, dentists, doctors)</fullName>
            </value>
            <value>
                <fullName>450 Computer Industry (non-manufacturing)</fullName>
            </value>
            <value>
                <fullName>Order 5</fullName>
            </value>
            <value>
                <fullName>511 Eating &amp; Drinking Places (ice cream parlors, donut shops)</fullName>
            </value>
            <value>
                <fullName>515 Hotels, Motels, Resorts, Organized Camps, Trailer Parks, Guest Ranches</fullName>
            </value>
            <value>
                <fullName>516 Health Care Industry, Hospitals</fullName>
            </value>
            <value>
                <fullName>517 Rest Homes, Sanitariums, Board &amp; Care Homes for the aged, child care &amp; juvenile facilities</fullName>
            </value>
            <value>
                <fullName>524 Animal Care, Pest Control, Landscaping (other than new construction), cemeteries, upholstery cleaning, mini storage, tree service</fullName>
            </value>
            <value>
                <fullName>534 Janitorial</fullName>
            </value>
            <value>
                <fullName>Order 6</fullName>
            </value>
            <value>
                <fullName>620 Dry Cleaning (carpets and draperies)</fullName>
            </value>
            <value>
                <fullName>621 Laundry</fullName>
            </value>
            <value>
                <fullName>677 Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>