force-app/main/default/objects/Account/fields/ITIN_SSN_status__c.field-meta.xml
<CustomField>
    <fullName>ITIN_SSN_status__c</fullName>
    <inlineHelpText>Used for JEU processing of restitution/unpaid wage fund payments only.</inlineHelpText>
    <label>ITIN/SSN Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSN on File</fullName>
            </value>
            <value>
                <fullName>ITIN on File</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>