force-app/main/default/objects/Account/fields/Legacy_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Case_Number__c</fullName>
    <description>For Migration Purpose</description>
    <label>Legacy Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>