force-app/main/default/objects/Account/fields/Legal_Entity_Description__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Description__c</fullName>
    <inlineHelpText>Phrase that follows Business Name, such as "a California Corporation."</inlineHelpText>
    <label>Legal Entity Description</label>
    <type>TextArea</type>
</CustomField>